restcontroll 返回xml 重新配置pom文件

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>server</module>
+        <module>admin-student</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
