--- a/server/src/main/resources/application-server1.properties
+++ b/server/src/main/resources/application-server1.properties
@@ -1,7 +1,7 @@
 server.port=8011
 spring.application.name=eureka-server
 
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:/8012/eureka/
+eureka.instance.hostname=peer1
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8012/eureka/
