--- a/server/src/main/resources/application-server2.properties
+++ b/server/src/main/resources/application-server2.properties
@@ -1,7 +1,7 @@
 server.port=8012
-spring.application.name=eureka-server2
+spring.application.name=eureka-server
 
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:/8011/eureka/
+eureka.instance.hostname=peer2
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8011/eureka/
