--- a/sall/src/main/resources/application.properties
+++ b/sall/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=sall-client
 server.port=8031
 
 eureka.client.service-url.defaultZone=http://localhost:8011/eureka/,http://localhost:8012/eureka/
+feign.hystrix.enabled=true
